--- a/home.htm
+++ b/home.htm
@@ -186,7 +186,7 @@
             <div class="logo">Cyber Aware</div>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="minacce.html">Minacce</a></li>
+                <li><a href="https://mattia-meola.github.io/cyberaware/minacce.html">Minacce</a></li>
                 <li><a href="sicurezza.html">Sicurezza</a></li>
                 <li><a href="risorse.html">Risorse Educative</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
@@ -198,14 +198,14 @@
         <section id="hero">
             <h1>Benvenuto su Cyber Aware</h1>
             <p>La tua guida per scoprire, prevenire e affrontare le minacce informatiche.</p>
-            <a href="minacce.html" class="cta-btn">Esplora le Minacce</a>
+            <a href="https://mattia-meola.github.io/cyberaware/minacce.html" class="cta-btn">Esplora le Minacce</a>
         </section>
 
         <section id="features">
             <div class="card" style="background-image: url('https://images.unsplash.com/photo-1529101091764-c3526daf38fe?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" aria-label="Immagine di minacce digitali">
                 <h2>Minacce</h2>
                 <p>Conosci i principali pericoli digitali come virus, phishing e attacchi hacker.</p>
-                <a href="minacce.html" class="btn">Scopri di più</a>
+                <a href="https://mattia-meola.github.io/cyberaware/minacce.html" class="btn">Scopri di più</a>
             </div>
             <div class="card" style="background-image: url('https://plus.unsplash.com/premium_photo-1700830328095-26c5a1c053b8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" aria-label="Immagine di sicurezza online">
                 <h2>Sicurezza</h2>
@@ -221,14 +221,15 @@
 
         <section id="home-description">
             <h2>Cyber Aware: la tua risorsa per la sicurezza informatica</h2>
-            <p>Cyber Aware è la tua guida completa per affrontare e comprendere il mondo della sicurezza informatica. In un'era in cui gli attacchi digitali sono sempre più frequenti e sofisticati, la protezione dei tuoi dati e dispositivi è fondamentale. Con le nostre risorse educative, ti forniremo le informazioni più recenti e le pratiche migliori per salvaguardare la tua privacy online. La sicurezza non è mai stata così semplice da comprendere e applicare!</p>
-            <p>Se hai dubbi sulla sicurezza di un link o sospetti che un file possa contenere virus, puoi sempre contattarci tramite la pagina "Contatti". Il nostro team è a disposizione per analizzare il link o il file sospetto e offrirti la guida necessaria per proteggerti. Non esitare a chiedere aiuto, perché la tua sicurezza è la nostra priorità!</p>
-            <a href="sicurezza.html" class="cta-btn">Scopri di più</a>
+            <p>Cyber Aware è la tua guida completa per affrontare e comprendere il mondo della sicurezza informatica. In un'era in cui gli attacchi informatici sono sempre più frequenti, è essenziale essere preparati e consapevoli delle migliori pratiche per proteggere i tuoi dati personali e aziendali.</p>
+            <p>Esplora il nostro sito per scoprire risorse educative, strumenti e consigli su come prevenire le minacce informatiche.</p>
+            <a href="risorse.html" class="cta-btn">Inizia il tuo percorso di apprendimento</a>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Cyber Aware. Tutti i diritti riservati.</p>
+        <p>Segui le migliori pratiche per una vita digitale sicura e protetta.</p>
     </footer>
 </body>
 </html>
