--- a/home.htm
+++ b/home.htm
@@ -186,7 +186,7 @@
             <div class="logo">Cyber Aware</div>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://mattia-meola.github.io/cyberaware/minacce.html">Minacce</a></li>
+                <li><a href="https://mattia-meola.github.io/cyberaware/minacce.htm">Minacce</a></li>
                 <li><a href="sicurezza.html">Sicurezza</a></li>
                 <li><a href="risorse.html">Risorse Educative</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
@@ -198,14 +198,14 @@
         <section id="hero">
             <h1>Benvenuto su Cyber Aware</h1>
             <p>La tua guida per scoprire, prevenire e affrontare le minacce informatiche.</p>
-            <a href="https://mattia-meola.github.io/cyberaware/minacce.html" class="cta-btn">Esplora le Minacce</a>
+            <a href="https://mattia-meola.github.io/cyberaware/minacce.htm" class="cta-btn">Esplora le Minacce</a>
         </section>
 
         <section id="features">
             <div class="card" style="background-image: url('https://images.unsplash.com/photo-1529101091764-c3526daf38fe?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" aria-label="Immagine di minacce digitali">
                 <h2>Minacce</h2>
                 <p>Conosci i principali pericoli digitali come virus, phishing e attacchi hacker.</p>
-                <a href="https://mattia-meola.github.io/cyberaware/minacce.html" class="btn">Scopri di più</a>
+                <a href="https://mattia-meola.github.io/cyberaware/minacce.htm" class="btn">Scopri di più</a>
             </div>
             <div class="card" style="background-image: url('https://plus.unsplash.com/premium_photo-1700830328095-26c5a1c053b8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');" aria-label="Immagine di sicurezza online">
                 <h2>Sicurezza</h2>
