--- a/minacce.htm
+++ b/minacce.htm
@@ -15,89 +15,90 @@
     <main>
         <section>
             <h2>Introduzione</h2>
-            <p>Questa pagina è dedicata a fornire informazioni dettagliate sui diversi tipi di malware e virus informatici. Ogni sezione descrive un tipo di minaccia e spiega come proteggersi.</p>
+            <p>Questa pagina fornisce una panoramica dettagliata sui diversi tipi di malware e virus informatici, descrivendone le caratteristiche e offrendo consigli su come proteggersi da queste minacce.</p>
         </section>
 
         <section>
             <h2>Tipi di Malware</h2>
+
             <article>
                 <h3>1. Virus</h3>
-                <p>I virus sono programmi malevoli progettati per infettare file e programmi legittimi. Si diffondono quando il file infetto viene eseguito. Possono distruggere dati o rallentare i sistemi. Di solito richiedono l'intervento dell'utente per attivarsi, come l'apertura di un file infetto o il clic su un link compromesso.</p>
+                <p>I virus sono programmi malevoli progettati per infettare file legittimi. Si diffondono tramite l'esecuzione di file infetti, causando danni come la distruzione di dati o il rallentamento del sistema.</p>
             </article>
 
             <article>
                 <h3>2. Worm</h3>
-                <p>I worm si diffondono autonomamente attraverso le reti, sfruttando vulnerabilità di sicurezza. Possono consumare larghezza di banda e risorse del sistema, causando rallentamenti. Sono particolarmente pericolosi perché non necessitano dell'interazione dell'utente per propagarsi.</p>
+                <p>I worm si propagano autonomamente sfruttando vulnerabilità di sicurezza, consumando risorse di sistema e larghezza di banda senza bisogno dell'intervento dell'utente.</p>
             </article>
 
             <article>
                 <h3>3. Trojan</h3>
-                <p>Noti anche come cavalli di Troia, questi malware si mascherano da software legittimi per ingannare gli utenti. Una volta installati, possono rubare informazioni o creare backdoor. Spesso vengono distribuiti attraverso download da siti non sicuri o allegati email sospetti.</p>
+                <p>I Trojan, o cavalli di Troia, si mascherano da software legittimi per ingannare gli utenti, permettendo accessi non autorizzati e il furto di dati sensibili.</p>
             </article>
 
             <article>
                 <h3>4. Ransomware</h3>
-                <p>Il ransomware cripta i dati delle vittime e richiede un riscatto per decriptarli. È spesso diffuso tramite email di phishing e siti web compromessi. Pagare il riscatto non garantisce sempre il recupero dei dati, e supporta ulteriormente i criminali informatici.</p>
+                <p>Il ransomware cripta i dati della vittima e richiede un riscatto per la decrittazione. Pagare il riscatto non garantisce il recupero dei dati e alimenta ulteriormente le attività criminali.</p>
             </article>
 
             <article>
                 <h3>5. Spyware</h3>
-                <p>Lo spyware raccoglie informazioni personali senza il consenso dell'utente. Spesso viene utilizzato per tracciare l'attività online e rubare dati sensibili. Può essere installato attraverso download nascosti o pacchetti software non verificati.</p>
+                <p>Lo spyware raccoglie informazioni personali senza il consenso dell'utente, spesso tracciandone l'attività online per rubare dati sensibili.</p>
             </article>
 
             <article>
                 <h3>6. Adware</h3>
-                <p>L'adware visualizza annunci indesiderati sul dispositivo dell'utente. Sebbene meno dannoso, può compromettere l'esperienza utente e rallentare i dispositivi. Talvolta, l'adware può raccogliere dati sulle abitudini di navigazione per scopi pubblicitari.</p>
+                <p>L'adware visualizza annunci indesiderati e talvolta raccoglie dati sulle abitudini di navigazione dell'utente, compromettendo l'esperienza utente.</p>
             </article>
 
             <article>
                 <h3>7. Rootkit</h3>
-                <p>I rootkit permettono agli hacker di ottenere accesso amministrativo a un sistema compromesso. Possono nascondere altri malware e risultano difficili da rilevare. Spesso richiedono un intervento specializzato per la loro rimozione.</p>
+                <p>I rootkit offrono agli hacker accesso amministrativo nascosto, risultando difficili da rilevare e spesso richiedono interventi specializzati per la rimozione.</p>
             </article>
 
             <article>
                 <h3>8. Keylogger</h3>
-                <p>I keylogger registrano ogni pressione dei tasti, consentendo agli hacker di rubare informazioni come password e dati bancari. Possono essere software o hardware, e spesso vengono utilizzati per spionaggio o furto di identità.</p>
+                <p>I keylogger registrano ogni pressione dei tasti, consentendo il furto di informazioni come password e dati bancari.</p>
             </article>
 
             <article>
                 <h3>9. Botnet</h3>
-                <p>Una botnet è una rete di computer infettati che viene controllata da un hacker per eseguire attacchi coordinati, come il DDoS. Le botnet possono anche essere utilizzate per inviare spam o diffondere altri malware.</p>
+                <p>Le botnet sono reti di computer compromessi controllate da hacker per eseguire attacchi coordinati come il DDoS o l'invio di spam.</p>
             </article>
 
             <article>
                 <h3>10. Fileless Malware</h3>
-                <p>Questo tipo di malware opera nella memoria del computer, senza installare file sul disco rigido, rendendolo difficile da rilevare per gli antivirus tradizionali. Solitamente sfrutta strumenti legittimi del sistema operativo per eseguire le sue operazioni malevole.</p>
+                <p>Questo malware opera interamente nella memoria del sistema, rendendosi difficile da rilevare in quanto non lascia tracce fisiche sul disco rigido.</p>
             </article>
 
             <article>
                 <h3>11. Logic Bomb</h3>
-                <p>Una logic bomb è un pezzo di codice che si attiva solo quando vengono soddisfatte determinate condizioni, causando danni al sistema. Può essere programmata per cancellare file o disattivare funzionalità del sistema.</p>
+                <p>Le logic bomb si attivano solo al verificarsi di determinate condizioni, causando potenziali danni come la cancellazione di dati.</p>
             </article>
 
             <article>
                 <h3>12. Backdoor</h3>
-                <p>Le backdoor consentono agli hacker di accedere a un sistema senza autorizzazione. Spesso vengono installate da altri malware. Possono essere utilizzate per il furto di dati o per controllare il sistema a distanza.</p>
+                <p>Le backdoor consentono l'accesso non autorizzato a un sistema, spesso installate da altri malware per permettere il controllo remoto.</p>
             </article>
 
             <article>
                 <h3>13. Scareware</h3>
-                <p>Lo scareware inganna gli utenti facendogli credere che il loro dispositivo sia infetto, spingendoli a scaricare software inutili o pericolosi. Spesso utilizza messaggi intimidatori per spingere all'azione.</p>
+                <p>Lo scareware sfrutta messaggi intimidatori per indurre gli utenti a scaricare software potenzialmente pericolosi o inutili.</p>
             </article>
 
             <article>
                 <h3>14. Cryptojacking</h3>
-                <p>Il cryptojacking utilizza la potenza di calcolo della vittima per minare criptovalute, rallentando il dispositivo e aumentando i costi energetici. Può essere distribuito tramite script nascosti in siti web compromessi.</p>
+                <p>Il cryptojacking sfrutta la potenza di calcolo del dispositivo per minare criptovalute a insaputa dell'utente, causando rallentamenti e consumi energetici elevati.</p>
             </article>
 
             <article>
                 <h3>15. Phishing</h3>
-                <p>Il phishing non è propriamente un malware, ma una tecnica che utilizza email o siti falsi per ingannare gli utenti e rubare informazioni personali. È una delle principali cause di furti di identità e accessi non autorizzati.</p>
+                <p>Il phishing è una tecnica ingannevole che utilizza email o siti fasulli per rubare informazioni personali come credenziali di accesso.</p>
             </article>
 
             <article>
                 <h3>16. Exploit</h3>
-                <p>Un exploit è un codice che sfrutta una vulnerabilità software per ottenere accesso o controllo su un sistema. Gli exploit possono essere utilizzati per diffondere malware o accedere a dati sensibili.</p>
+                <p>Gli exploit sfruttano vulnerabilità software per ottenere accesso o controllo su un sistema, spesso per installare malware o accedere a dati sensibili.</p>
             </article>
         </section>
     </main>
