--- a/minacce.htm
+++ b/minacce.htm
@@ -63,11 +63,21 @@
             margin-bottom: 1.5rem;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: flex-start;
+            gap: 1rem;
         }
 
         article h3 {
             margin-top: 0;
             color: #2c3e50;
+        }
+
+        article img {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 5px;
         }
 
         footer {
@@ -97,6 +107,13 @@
 
             article {
                 padding: 0.75rem;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            article img {
+                width: 80px;
+                height: 80px;
             }
         }
     </style>
@@ -116,83 +133,131 @@
             <h2>Tipi di Malware</h2>
 
             <article>
-                <h3>1. Virus</h3>
-                <p>I virus sono programmi malevoli progettati per infettare file legittimi. Si diffondono tramite l'esecuzione di file infetti, causando danni come la distruzione di dati o il rallentamento del sistema.</p>
+                <img src="path/to/virus_image.jpg" alt="Virus Icon">
+                <div>
+                    <h3>1. Virus</h3>
+                    <p>I virus sono programmi malevoli progettati per infettare file legittimi. Si diffondono tramite l'esecuzione di file infetti, causando danni come la distruzione di dati o il rallentamento del sistema.</p>
+                </div>
             </article>
 
             <article>
-                <h3>2. Worm</h3>
-                <p>I worm si propagano autonomamente sfruttando vulnerabilità di sicurezza, consumando risorse di sistema e larghezza di banda senza bisogno dell'intervento dell'utente.</p>
+                <img src="path/to/worm_image.jpg" alt="Worm Icon">
+                <div>
+                    <h3>2. Worm</h3>
+                    <p>I worm si propagano autonomamente sfruttando vulnerabilità di sicurezza, consumando risorse di sistema e larghezza di banda senza bisogno dell'intervento dell'utente.</p>
+                </div>
             </article>
 
             <article>
-                <h3>3. Trojan</h3>
-                <p>I Trojan, o cavalli di Troia, si mascherano da software legittimi per ingannare gli utenti, permettendo accessi non autorizzati e il furto di dati sensibili.</p>
+                <img src="path/to/trojan_image.jpg" alt="Trojan Icon">
+                <div>
+                    <h3>3. Trojan</h3>
+                    <p>I Trojan, o cavalli di Troia, si mascherano da software legittimi per ingannare gli utenti, permettendo accessi non autorizzati e il furto di dati sensibili.</p>
+                </div>
             </article>
 
             <article>
-                <h3>4. Ransomware</h3>
-                <p>Il ransomware cripta i dati della vittima e richiede un riscatto per la decrittazione. Pagare il riscatto non garantisce il recupero dei dati e alimenta ulteriormente le attività criminali.</p>
+                <img src="path/to/ransomware_image.jpg" alt="Ransomware Icon">
+                <div>
+                    <h3>4. Ransomware</h3>
+                    <p>Il ransomware cripta i dati della vittima e richiede un riscatto per la decrittazione. Pagare il riscatto non garantisce il recupero dei dati e alimenta ulteriormente le attività criminali.</p>
+                </div>
             </article>
 
             <article>
-                <h3>5. Spyware</h3>
-                <p>Lo spyware raccoglie informazioni personali senza il consenso dell'utente, spesso tracciandone l'attività online per rubare dati sensibili.</p>
+                <img src="path/to/spyware_image.jpg" alt="Spyware Icon">
+                <div>
+                    <h3>5. Spyware</h3>
+                    <p>Lo spyware raccoglie informazioni personali senza il consenso dell'utente, spesso tracciandone l'attività online per rubare dati sensibili.</p>
+                </div>
             </article>
 
             <article>
-                <h3>6. Adware</h3>
-                <p>L'adware visualizza annunci indesiderati e talvolta raccoglie dati sulle abitudini di navigazione dell'utente, compromettendo l'esperienza utente.</p>
+                <img src="path/to/adware_image.jpg" alt="Adware Icon">
+                <div>
+                    <h3>6. Adware</h3>
+                    <p>L'adware visualizza annunci indesiderati e talvolta raccoglie dati sulle abitudini di navigazione dell'utente, compromettendo l'esperienza utente.</p>
+                </div>
             </article>
 
             <article>
-                <h3>7. Rootkit</h3>
-                <p>I rootkit offrono agli hacker accesso amministrativo nascosto, risultando difficili da rilevare e spesso richiedono interventi specializzati per la rimozione.</p>
+                <img src="path/to/rootkit_image.jpg" alt="Rootkit Icon">
+                <div>
+                    <h3>7. Rootkit</h3>
+                    <p>I rootkit offrono agli hacker accesso amministrativo nascosto, risultando difficili da rilevare e spesso richiedono interventi specializzati per la rimozione.</p>
+                </div>
             </article>
 
             <article>
-                <h3>8. Keylogger</h3>
-                <p>I keylogger registrano ogni pressione dei tasti, consentendo il furto di informazioni come password e dati bancari.</p>
+                <img src="path/to/keylogger_image.jpg" alt="Keylogger Icon">
+                <div>
+                    <h3>8. Keylogger</h3>
+                    <p>I keylogger registrano ogni pressione dei tasti, consentendo il furto di informazioni come password e dati bancari.</p>
+                </div>
             </article>
 
             <article>
-                <h3>9. Botnet</h3>
-                <p>Le botnet sono reti di computer compromessi controllate da hacker per eseguire attacchi coordinati come il DDoS o l'invio di spam.</p>
+                <img src="path/to/botnet_image.jpg" alt="Botnet Icon">
+                <div>
+                    <h3>9. Botnet</h3>
+                    <p>Le botnet sono reti di computer compromessi controllate da hacker per eseguire attacchi coordinati come il DDoS o l'invio di spam.</p>
+                </div>
             </article>
 
             <article>
-                <h3>10. Fileless Malware</h3>
-                <p>Questo malware opera interamente nella memoria del sistema, rendendosi difficile da rilevare in quanto non lascia tracce fisiche sul disco rigido.</p>
+                <img src="path/to/fileless_image.jpg" alt="Fileless Malware Icon">
+                <div>
+                    <h3>10. Fileless Malware</h3>
+                    <p>Questo malware opera interamente nella memoria del sistema, rendendosi difficile da rilevare in quanto non lascia tracce fisiche sul disco rigido.</p>
+                </div>
             </article>
 
             <article>
-                <h3>11. Logic Bomb</h3>
-                <p>Le logic bomb si attivano solo al verificarsi di determinate condizioni, causando potenziali danni come la cancellazione di dati.</p>
+                <img src="path/to/logic_bomb_image.jpg" alt="Logic Bomb Icon">
+                <div>
+                    <h3>11. Logic Bomb</h3>
+                    <p>Le logic bomb si attivano solo al verificarsi di determinate condizioni, causando potenziali danni come la cancellazione di dati.</p>
+                </div>
             </article>
 
             <article>
-                <h3>12. Backdoor</h3>
-                <p>Le backdoor consentono l'accesso non autorizzato a un sistema, spesso installate da altri malware per permettere il controllo remoto.</p>
+                <img src="path/to/backdoor_image.jpg" alt="Backdoor Icon">
+                <div>
+                    <h3>12. Backdoor</h3>
+                    <p>Le backdoor consentono l'accesso non autorizzato a un sistema, spesso installate da altri malware per permettere il controllo remoto.</p>
+                </div>
             </article>
 
             <article>
-                <h3>13. Scareware</h3>
-                <p>Lo scareware sfrutta messaggi intimidatori per indurre gli utenti a scaricare software potenzialmente pericolosi o inutili.</p>
+                <img src="path/to/scareware_image.jpg" alt="Scareware Icon">
+                <div>
+                    <h3>13. Scareware</h3>
+                    <p>Lo scareware sfrutta messaggi intimidatori per indurre gli utenti a scaricare software potenzialmente pericolosi o inutili.</p>
+                </div>
             </article>
 
             <article>
-                <h3>14. Cryptojacking</h3>
-                <p>Il cryptojacking sfrutta la potenza di calcolo del dispositivo per minare criptovalute a insaputa dell'utente, causando rallentamenti e consumi energetici elevati.</p>
+                <img src="path/to/cryptojacking_image.jpg" alt="Cryptojacking Icon">
+                <div>
+                    <h3>14. Cryptojacking</h3>
+                    <p>Il cryptojacking sfrutta la potenza di calcolo del dispositivo per minare criptovalute a insaputa dell'utente, causando rallentamenti e consumi energetici elevati.</p>
+                </div>
             </article>
 
             <article>
-                <h3>15. Phishing</h3>
-                <p>Il phishing è una tecnica ingannevole che utilizza email o siti fasulli per rubare informazioni personali come credenziali di accesso.</p>
+                <img src="path/to/phishing_image.jpg" alt="Phishing Icon">
+                <div>
+                    <h3>15. Phishing</h3>
+                    <p>Il phishing è una tecnica ingannevole che utilizza email o siti fasulli per rubare informazioni personali come credenziali di accesso.</p>
+                </div>
             </article>
 
             <article>
-                <h3>16. Exploit</h3>
-                <p>Gli exploit sfruttano vulnerabilità software per ottenere accesso o controllo su un sistema, spesso per installare malware o accedere a dati sensibili.</p>
+                <img src="path/to/exploit_image.jpg" alt="Exploit Icon">
+                <div>
+                    <h3>16. Exploit</h3>
+                    <p>Gli exploit sfruttano vulnerabilità software per ottenere accesso o controllo su un sistema, spesso per installare malware o accedere a dati sensibili.</p>
+                </div>
             </article>
         </section>
     </main>
