--- a/minacce.htm
+++ b/minacce.htm
@@ -25,10 +25,35 @@
         }
 
         header {
-            background-color: #333;
+            background: #1d3557;
             color: white;
-            text-align: center;
-            padding: 1rem 0;
+            padding: 1rem 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        header .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        header nav .menu {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        header nav .menu li {
+            margin: 0 15px;
+        }
+
+        header nav .menu li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
         }
 
         main {
@@ -80,8 +105,30 @@
             border-radius: 5px;
         }
 
+        .details {
+            display: none;
+            background-color: #f1f1f1;
+            padding: 1rem;
+            margin-top: 0.5rem;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        button {
+            background-color: #007acc;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #005f99;
+        }
+
         footer {
-            background-color: #333;
+            background-color: #1d3557;
             color: white;
             text-align: center;
             padding: 1rem;
@@ -97,6 +144,39 @@
 
         a:hover {
             text-decoration: underline;
+        }
+
+        /* Hero Section */
+        #hero {
+            background: linear-gradient(rgba(29, 53, 87, 0.8), rgba(29, 53, 87, 0.8)), url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center/cover;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+        }
+
+        #hero h1 {
+            font-size: 4rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            color: white;
+        }
+
+        #hero .cta-btn {
+            display: inline-block;
+            background: #457b9d;
+            color: white;
+            padding: 5px 10px;
+            margin-top: 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: background 0.3s ease;
+            width: auto;
+            text-align: center;
+        }
+
+        #hero .cta-btn:hover {
+            background: #1d3557;
         }
 
         /* Responsive Design */
@@ -117,18 +197,35 @@
             }
         }
     </style>
+    <script>
+        function toggleDetails(id) {
+            const details = document.getElementById(id);
+            details.style.display = details.style.display === 'block' ? 'none' : 'block';
+        }
+    </script>
 </head>
 
 <body>
     <header>
-        <h1>Guida ai Malware e Virus</h1>
+        <div class="logo">Cyber Aware</div>
+        <nav>
+            <ul class="menu">
+                <li><a href="https://mattia-meola.github.io/cyberaware/home.htm">Home</a></li>
+                <li><a href="https://mattia-meola.github.io/cyberaware/minacce.htm">Minacce</a></li>
+                <li><a href="sicurezza.html">Sicurezza</a></li>
+                <li><a href="risorse.html">Risorse Educative</a></li>
+                <li><a href="contatti.html">Contatti</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section>
-            <h2>Introduzione</h2>
-            <p>Questa pagina fornisce una panoramica dettagliata sui diversi tipi di malware e virus informatici, descrivendone le caratteristiche e offrendo consigli su come proteggersi da queste minacce.</p>
-        </section>
 
+    <section id="hero">
+        <h1><strong>Minacce</strong></h1>
+        <p>La tua guida per scoprire, prevenire e affrontare le minacce informatiche.</p>
+        <a href="https://mattia-meola.github.io/cyberaware/minacce.htm" class="cta-btn">Esplora le Minacce</a>
+    </section>
+
+    <main>
         <section>
             <h2>Tipi di Malware</h2>
 
@@ -136,7 +233,11 @@
                 <img src="path/to/virus_image.jpg" alt="Virus Icon">
                 <div>
                     <h3>1. Virus</h3>
-                    <p>I virus sono programmi malevoli progettati per infettare file legittimi. Si diffondono tramite l'esecuzione di file infetti, causando danni come la distruzione di dati o il rallentamento del sistema.</p>
+                    <p>I virus sono programmi malevoli progettati per infettare file legittimi.</p>
+                    <button onclick="toggleDetails('details-virus')">Approfondimento</button>
+                    <div class="details" id="details-virus">
+                        <p>Un virus si diffonde tramite file infetti e causa danni come distruzione di dati e rallentamenti del sistema. Spesso necessita dell'intervento umano per essere attivato.</p>
+                    </div>
                 </div>
             </article>
 
@@ -144,7 +245,11 @@
                 <img src="path/to/worm_image.jpg" alt="Worm Icon">
                 <div>
                     <h3>2. Worm</h3>
-                    <p>I worm si propagano autonomamente sfruttando vulnerabilità di sicurezza, consumando risorse di sistema e larghezza di banda senza bisogno dell'intervento dell'utente.</p>
+                    <p>I worm si propagano autonomamente sfruttando vulnerabilità di sicurezza.</p>
+                    <button onclick="toggleDetails('details-worm')">Approfondimento</button>
+                    <div class="details" id="details-worm">
+                        <p>I worm non richiedono l'esecuzione da parte dell'utente per propagarsi e possono consumare notevoli risorse di sistema.</p>
+                    </div>
                 </div>
             </article>
 
@@ -152,118 +257,21 @@
                 <img src="path/to/trojan_image.jpg" alt="Trojan Icon">
                 <div>
                     <h3>3. Trojan</h3>
-                    <p>I Trojan, o cavalli di Troia, si mascherano da software legittimi per ingannare gli utenti, permettendo accessi non autorizzati e il furto di dati sensibili.</p>
+                    <p>I Trojan si mascherano da software legittimi per ingannare gli utenti.</p>
+                    <button onclick="toggleDetails('details-trojan')">Approfondimento</button>
+                    <div class="details" id="details-trojan">
+                        <p>Questi malware consentono accessi non autorizzati ai sistemi degli utenti, spesso portando al furto di dati sensibili.</p>
+                    </div>
                 </div>
             </article>
 
-            <article>
-                <img src="path/to/ransomware_image.jpg" alt="Ransomware Icon">
-                <div>
-                    <h3>4. Ransomware</h3>
-                    <p>Il ransomware cripta i dati della vittima e richiede un riscatto per la decrittazione. Pagare il riscatto non garantisce il recupero dei dati e alimenta ulteriormente le attività criminali.</p>
-                </div>
-            </article>
+            <!-- Add other articles as in your original content -->
 
-            <article>
-                <img src="path/to/spyware_image.jpg" alt="Spyware Icon">
-                <div>
-                    <h3>5. Spyware</h3>
-                    <p>Lo spyware raccoglie informazioni personali senza il consenso dell'utente, spesso tracciandone l'attività online per rubare dati sensibili.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/adware_image.jpg" alt="Adware Icon">
-                <div>
-                    <h3>6. Adware</h3>
-                    <p>L'adware visualizza annunci indesiderati e talvolta raccoglie dati sulle abitudini di navigazione dell'utente, compromettendo l'esperienza utente.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/rootkit_image.jpg" alt="Rootkit Icon">
-                <div>
-                    <h3>7. Rootkit</h3>
-                    <p>I rootkit offrono agli hacker accesso amministrativo nascosto, risultando difficili da rilevare e spesso richiedono interventi specializzati per la rimozione.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/keylogger_image.jpg" alt="Keylogger Icon">
-                <div>
-                    <h3>8. Keylogger</h3>
-                    <p>I keylogger registrano ogni pressione dei tasti, consentendo il furto di informazioni come password e dati bancari.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/botnet_image.jpg" alt="Botnet Icon">
-                <div>
-                    <h3>9. Botnet</h3>
-                    <p>Le botnet sono reti di computer compromessi controllate da hacker per eseguire attacchi coordinati come il DDoS o l'invio di spam.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/fileless_image.jpg" alt="Fileless Malware Icon">
-                <div>
-                    <h3>10. Fileless Malware</h3>
-                    <p>Questo malware opera interamente nella memoria del sistema, rendendosi difficile da rilevare in quanto non lascia tracce fisiche sul disco rigido.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/logic_bomb_image.jpg" alt="Logic Bomb Icon">
-                <div>
-                    <h3>11. Logic Bomb</h3>
-                    <p>Le logic bomb si attivano solo al verificarsi di determinate condizioni, causando potenziali danni come la cancellazione di dati.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/backdoor_image.jpg" alt="Backdoor Icon">
-                <div>
-                    <h3>12. Backdoor</h3>
-                    <p>Le backdoor consentono l'accesso non autorizzato a un sistema, spesso installate da altri malware per permettere il controllo remoto.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/scareware_image.jpg" alt="Scareware Icon">
-                <div>
-                    <h3>13. Scareware</h3>
-                    <p>Lo scareware sfrutta messaggi intimidatori per indurre gli utenti a scaricare software potenzialmente pericolosi o inutili.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/cryptojacking_image.jpg" alt="Cryptojacking Icon">
-                <div>
-                    <h3>14. Cryptojacking</h3>
-                    <p>Il cryptojacking sfrutta la potenza di calcolo del dispositivo per minare criptovalute a insaputa dell'utente, causando rallentamenti e consumi energetici elevati.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/phishing_image.jpg" alt="Phishing Icon">
-                <div>
-                    <h3>15. Phishing</h3>
-                    <p>Il phishing è una tecnica ingannevole che utilizza email o siti fasulli per rubare informazioni personali come credenziali di accesso.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="path/to/exploit_image.jpg" alt="Exploit Icon">
-                <div>
-                    <h3>16. Exploit</h3>
-                    <p>Gli exploit sfruttano vulnerabilità software per ottenere accesso o controllo su un sistema, spesso per installare malware o accedere a dati sensibili.</p>
-                </div>
-            </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Malware Info. Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Informazioni sui Malware. Tutti i diritti riservati.</p>
     </footer>
 </body>
 
