--- a/Ris.Edu.htm
+++ b/Ris.Edu.htm
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina HTML di Esempio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Benvenuto nella mia pagina web!</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#info">Info</a>
+            <a href="#contatti">Contatti</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Sezione Home</h2>
+            <p>Questa è una semplice pagina web in HTML.</p>
+        </section>
+
+        <section id="info">
+            <h2>Sezione Info</h2>
+            <p>Puoi aggiungere qui informazioni sulla tua attività o sui tuoi interessi.</p>
+        </section>
+
+        <section id="contatti">
+            <h2>Sezione Contatti</h2>
+            <p>Per contattarmi, scrivimi a: <a href="mailto:esempio@email.com">esempio@email.com</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 - Tutti i diritti riservati</p>
+    </footer>
+</body>
+</html>
 
