--- a/home.htm
+++ b/home.htm
@@ -185,9 +185,9 @@
         <nav>
             <div class="logo">Cyber Aware</div>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="https://mattia-meola.github.io/cyberaware/home.htm">Home</a></li>
                 <li><a href="https://mattia-meola.github.io/cyberaware/minacce.htm">Minacce</a></li>
-                <li><a href="sicurezza.html">Sicurezza</a></li>
+                <li><a href="https://mattia-meola.github.io/cyberaware/sicurezza.htm">Sicurezza</a></li>
                 <li><a href="risorse.html">Risorse Educative</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
             </ul>
